fix the gap between chat input and messages

--- a/src/pages/chat/chat.module.scss
+++ b/src/pages/chat/chat.module.scss
@@ -9,11 +9,9 @@
 .messageBox {
   width: 100%;
   grid-row: 2/3;
-  padding-bottom: 20px;
   overflow-y: scroll;
 
 }
-
 .avatarNav {
   display: flex;
   flex-direction: row;
@@ -40,7 +38,7 @@
   background-color: white;
   height: 100%;
   display: grid;
-  grid-template-rows: 50px 1fr 42px 50px;
+  grid-template-rows: 50px 1fr 52px 50px;
 }
 
 .chatFieldContainer {
@@ -51,7 +49,7 @@
   max-width: 600px;
   height: auto;
   margin: 5px 0px;
-  bottom: 45px;
+  bottom: 50px;
   justify-content: space-around;
   align-items: center;
   display: flex;
